--- a/index.html
+++ b/index.html
@@ -26,17 +26,26 @@
           </tr>
         </thead>
         <tbody>
-          <tr v-for="entry in data" >
-            
+          <tr
+            v-for="entry in data" :key="entry.id"
+            v-bind:class="{ active: entry.isSelected }">
             <td class="control">
               <div class="row">
                 <div class="block triangle_up" @click="increment(entry)"></div>
                 <div class="block triangle_down" @click="decrement(entry)"></div>
-                <button class="block button" @click="setActive(entry)">Active</button>
+                <button 
+                  v-if="entry.id!=activeId"
+                  class="block button" @click="setActive(entry)">Active</button>
+                <div
+                  v-if="entry.id==activeId" class="block"
+                  style="text-align: center; font-size: 28px;">ACTIVE</div>
               </div>
             </td>
             <td v-for="key in columns">
-              {{ entry[key] }}
+              <span v-if="entry.id!=activeId"> {{ entry[key] }} </span>
+              <span
+                v-if="entry.id==activeId"
+                style="font-weight: bold"> {{ entry[key] }} </span>
             </td>
             
           </tr>
@@ -74,8 +83,10 @@
     },
     data: function () {
       this.reset()
+      var initActiveId = 6; // 鉛酸電池
+      this.data[initActiveId - 1].isSelected = true;
       return {
-        activeId: 6  // 鉛酸電池
+        activeId: initActiveId
       }
     },
     computed: {
@@ -114,7 +125,9 @@
         }
       },
       setActive: function (category) {
+        this.data[this.activeId - 1].isSelected = false;
         this.activeId = category.id;
+        category.isSelected = true;
         console.log(category.type + ' is active.');
       },
       addCount: function () {
@@ -142,18 +155,18 @@
       countText: '',
       gridColumns: ['type', 'count'],
       gridData: [
-      { id:  1, type: '刀剪', count: 1234 },
-      { id:  2, type: '腳架', count: 1234 },
-      { id:  3, type: '棍棒', count: 1234 },
-      { id:  4, type: '工具', count: 1234 },
-      { id:  5, type: '打火機', count: 1234 },
-      { id:  6, type: '鉛酸電池', count: 1234 },
-      { id:  7, type: '槍刀玩具', count: 1234 },
-      { id:  8, type: '噴罐', count: 1234 },
-      { id:  9, type: '防狼噴霧', count: 1234 },
-      { id: 10, type: '煙火', count: 1234 },
-      { id: 11, type: '易燃液體', count: 1234 },
-      { id: 12, type: '腐蝕液體', count: 1234 }
+      { id:  1, isSelected: false, type: '刀剪', count: 1234 },
+      { id:  2, isSelected: false, type: '腳架', count: 1234 },
+      { id:  3, isSelected: false, type: '棍棒', count: 1234 },
+      { id:  4, isSelected: false, type: '工具', count: 1234 },
+      { id:  5, isSelected: false, type: '打火機', count: 1234 },
+      { id:  6, isSelected: false, type: '鉛酸電池', count: 1234 },
+      { id:  7, isSelected: false, type: '槍刀玩具', count: 1234 },
+      { id:  8, isSelected: false, type: '噴罐', count: 1234 },
+      { id:  9, isSelected: false, type: '防狼噴霧', count: 1234 },
+      { id: 10, isSelected: false, type: '煙火', count: 1234 },
+      { id: 11, isSelected: false, type: '易燃液體', count: 1234 },
+      { id: 12, isSelected: false, type: '腐蝕液體', count: 1234 }
       ]
     }
   })
