Remove unused or confusing parts in the code
* Remove Inc/Dec triangle buttons; they are not important for now
 since the row can be activated and add value
* Remove 'Actions' column and move 'Reset' button out the table
* Remove Bootstrap optional JS since I don't use them for now
* Remove 'dg-counter.css.bak'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <tr>
           <th scope="col">Type</th>
           <th scope="col">Count</th>
-          <th scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -46,28 +45,18 @@
               </span>
               {{ checkCountAddValue }}
           </td>
-          <td>
-            <div class="my-row">
-              <div class="my-block triangle_up" @click="increment(item)"></div>
-              <div class="my-block triangle_down" @click="decrement(item)"></div>
-            </div>
-          </td>
         </tr>
       </tbody>
-      <thead class="thead-dark">
+      <thead class="thead-light">
         <tr>
           <th>Total:</th>
           <th>{{ total }}</th>
-          <th>
-            <button type="button" class="btn btn-primary" @click="reset()">Reset</button>
-          </th>
         </tr>
       </thead>
     </table>
-
-    <table class="table">
-
-    </table>
+    <div class="float-right">
+      <button type="button" class="btn btn-primary" @click="reset()">Reset</button>
+    </div>
     </div>
 
     <script>
@@ -269,14 +258,5 @@
       dataSetup()
       app.$mount('#dgc-app')
     </script>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"></script>
 
 </body>
