--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <tbody>
         <tr v-for="item in items"
           :key="item.id":class="{ 'table-success': item == activeItem }"
-          @click="setActive(item)">">
+          @click="setActive(item)">
           <td>
             <span v-if="item != activeItem"> {{ item.type }} </span>
             <span v-if="item == activeItem" style="font-weight: bold">
