--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <div class="dgc-app container">
     <div class="btn-group" role="group">
       <button type="button" class="btn btn-primary"
-      :class="{ disabled: currentHistoryId === 0}"
+      :class="{ disabled: historyId === 0}"
       @click="undo()">Undo</button>
       <button type="button" class="btn btn-primary"
-      :class="{ disabled: currentHistoryId === editHistory.length }"
+      :class="{ disabled: historyId === editHistory.length }"
       @click="redo()">Redo</button>
     </div>
 
@@ -40,7 +40,8 @@
       </thead>
       <tbody>
         <tr v-for="item in items"
-        :key="item.id":class="{ 'table-success': item == activeItem }"
+        :key="item.id"
+        :class="{ 'table-success': item == activeItem }"
         @click="setActive(item)">
         <td>
           <span v-if="item != activeItem"> {{ item.type }} </span>
